Spec picker done Fix overflow issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1141,3 +1141,8 @@ tbody tr:nth-child(odd){
     background: #5cb85c;
     color: #fff;
 }
+
+.table-responsive
+{
+    overflow:inherit;
+}
